--- a/NorthWind.WebApi/appsettings.json
+++ b/NorthWind.WebApi/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=LAPTOP-LMAR;Database=NorthWindDB;User Id=sa;Pwd=sql"
+    "DefaultConnection": "cadena de conexion"
   }
 }
